# SpeechRecognitionYarp

./: .gitignore  CMakeLists.txt  README.md
app/conf/: SpeechRecognition.ini  action_list.ini
app/script/: speech_recognition.xml
src/: CMakeLists.txt  main.py  requirements.txt  utils.py
